[metadata]
name = pyg-oms
version = 0.0.1
author = Yoav Git
author_email = yoav.git@gmail.com
description = Simple order management system
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gityoav/pyg-oms
project_urls =
    Bug Tracker = https://github.com/gityoav/pyg-oms/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = pyg-base; pyg-mongo

[options.packages.find]
where = src